# cyberd

./: .gitignore  CMakeLists.txt  IPCTL.md  LICENSE  Makefile  Makefile.part  Makefile.rules  README.md  bconf  bconf.mk  config.h  configure  meson.build  meson_options.txt
ctl/: main.c
docs/: Doxyfile.in  cyberctl.1.md  cyberd.5.md  cyberd.8.md  endpoints.md  inter-process-communications.md  meson.build
examples/daemons/: invalid.loadreload  sleep.10  sleep.5  valid.load
include/: capabilities.h  commands.h  config.h  config.h.in  meson.build  perms.h
man/: cyberctl.1  cyberctl.1.md  cyberd.1  cyberd.5  cyberd.5.md  cyberd.8
man/man1/: cyberctl.1
man/man5/: cyberd.5
man/man8/: cyberd.8
sources/init/: configuration.c  daemon.c  daemon.h  main.c  signals.c
sources/init/networker/: networker.c
sources/init/scheduler/: scheduler.c
sources/init/spawns/: spawns.c  spawns.h
sources/lib/: cyberctl.h
src/: .gitignore  automata.c  automata.h  commands.h  config.h  configuration.c  configuration.h  cyberctl.c  daemon.c  daemon.h  daemon_conf.c  daemon_conf.h  dispatcher.c  dispatcher.h  fde.c  fde.h  hash.c  hash.h  log.c  log.h  main.c  scheduler.c  scheduler.h  signals.c  signals.h  spawns.c  spawns.h  tree.c  tree.h
src/ctl/: main.c
src/cyberctl/: main.c  meson.build
src/cyberd/: capabilities.h  commands.h  configuration.c  configuration.h  daemon.c  daemon.h  daemon_conf.c  daemon_conf.h  dispatcher.c  dispatcher.h  dispatcher_node.c  dispatcher_node.h  fde.c  fde.h  hash.c  hash.h  log.c  log.h  main.c  meson.build  scheduler.c  scheduler.h  signals.c  signals.h  socket_connection_node.c  socket_connection_node.h  socket_endpoint_node.c  socket_endpoint_node.h  socket_node.c  socket_node.h  socket_switch.c  socket_switch.h  spawns.c  spawns.h  tree.c  tree.h
src/cyberd/daemon_conf/: parse.c
src/cyberd/fde/: command_reader.c  command_reader.h  control.c  control.h  perms.h
src/daemon_conf/: parse.c
src/fde/: command_reader.c  command_reader.h  control.c  control.h  perms.h
src/init/: config.c  config.h  configuration.c  configuration.h  daemon.c  daemon.h  init.h  load.c  load.h  log.c  log.h  main.c  signals.c  signals.h
src/init/daemons/: daemons.c  daemons.h
src/init/networker/: networker.c  networker.h
src/init/scheduler/: scheduler.c  scheduler.h
src/init/spawns/: spawns.c  spawns.h
src/lib/: cyberctl.c  cyberctl.h
test/: .gitignore  cyberd-tree.c  meson.build  test-cyberd-tree.c
test/cyberd/: test.sh
test/cyberd/daemons/: test.sleep.5  test.valid.load
test/daemons/: test.invalid.loadreload  test.sleep.10  test.valid.load
tests/: test.ls2  test.ls5  test.pwd  test.pwd3
uman/: cyberctl.1.yaml  cyberd.5.md  cyberd.5.yaml  cyberd.8.md  cyberd.8.yaml
